--- a/QEIplot.ipynb
+++ b/QEIplot.ipynb
@@ -2,10 +2,114 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "72e78599",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: nlme\n",
+      "\n",
+      "This is mgcv 1.8-36. For overview type 'help(\"mgcv-package\")'.\n",
+      "\n",
+      "Loading required namespace: memoise\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘plyr’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:ggpubr’:\n",
+      "\n",
+      "    mutate\n",
+      "\n",
+      "\n",
+      "Loading required package: lme4\n",
+      "\n",
+      "Loading required package: Matrix\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘lme4’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:nlme’:\n",
+      "\n",
+      "    lmList\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘lmerTest’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:lme4’:\n",
+      "\n",
+      "    lmer\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:stats’:\n",
+      "\n",
+      "    step\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘dplyr’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:plyr’:\n",
+      "\n",
+      "    arrange, count, desc, failwith, id, mutate, rename, summarise,\n",
+      "    summarize\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:nlme’:\n",
+      "\n",
+      "    collapse\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    filter, lag\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n",
+      "\n",
+      "Registered S3 methods overwritten by 'parameters':\n",
+      "  method                           from      \n",
+      "  as.double.parameters_kurtosis    datawizard\n",
+      "  as.double.parameters_skewness    datawizard\n",
+      "  as.double.parameters_smoothness  datawizard\n",
+      "  as.numeric.parameters_kurtosis   datawizard\n",
+      "  as.numeric.parameters_skewness   datawizard\n",
+      "  as.numeric.parameters_smoothness datawizard\n",
+      "  print.parameters_distribution    datawizard\n",
+      "  print.parameters_kurtosis        datawizard\n",
+      "  print.parameters_skewness        datawizard\n",
+      "  summary.parameters_kurtosis      datawizard\n",
+      "  summary.parameters_skewness      datawizard\n",
+      "\n",
+      "Learn more about sjPlot with 'browseVignettes(\"sjPlot\")'.\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘sjlabelled’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    as_label\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:ggplot2’:\n",
+      "\n",
+      "    as_label\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(ggplot2)\n",
     "library(mgcv)\n",
@@ -242,17 +346,7 @@
    "execution_count": 6,
    "id": "90872109",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in write.table(\"file.txt\", spnc.model$coefficients): object 'spnc.model' not found\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in write.table(\"file.txt\", spnc.model$coefficients): object 'spnc.model' not found\nTraceback:\n",
-      "1. write.table(\"file.txt\", spnc.model$coefficients)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#write.table('file.txt',spnc.model$coefficients)"
    ]
@@ -330,66 +424,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "25873db7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Linear mixed model fit by REML. t-tests use Satterthwaite's method [\n",
-       "lmerModLmerTest]\n",
-       "Formula: QEI ~ CBFTYPE + FD + CBFTYPE * FD + (1 | sub)\n",
-       "   Data: pnc\n",
-       "\n",
-       "REML criterion at convergence: -998.1\n",
-       "\n",
-       "Scaled residuals: \n",
-       "    Min      1Q  Median      3Q     Max \n",
-       "-4.4940 -0.2300 -0.0339  0.5424  2.4140 \n",
-       "\n",
-       "Random effects:\n",
-       " Groups   Name        Variance Std.Dev.\n",
-       " sub      (Intercept) 0.01074  0.1036  \n",
-       " Residual             0.01197  0.1094  \n",
-       "Number of obs: 856, groups:  sub, 214\n",
-       "\n",
-       "Fixed effects:\n",
-       "                  Estimate Std. Error         df t value Pr(>|t|)    \n",
-       "(Intercept)       0.857566   0.022373 507.518780  38.330  < 2e-16 ***\n",
-       "CBFTYPEPVC       -0.079899   0.022972 636.000002  -3.478 0.000539 ***\n",
-       "CBFTYPESCBF      -0.104787   0.022972 636.000002  -4.562 6.09e-06 ***\n",
-       "CBFTYPESCRUB      0.008212   0.022972 636.000002   0.357 0.720858    \n",
-       "FD               -0.241709   0.098620 507.518781  -2.451 0.014586 *  \n",
-       "CBFTYPEPVC:FD     0.034202   0.101258 636.000002   0.338 0.735648    \n",
-       "CBFTYPESCBF:FD   -0.220280   0.101258 636.000002  -2.175 0.029965 *  \n",
-       "CBFTYPESCRUB:FD   0.099630   0.101258 636.000002   0.984 0.325530    \n",
-       "---\n",
-       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
-       "\n",
-       "Correlation of Fixed Effects:\n",
-       "              (Intr) CBFTYPEPVC CBFTYPESCBF CBFTYPESCRUB FD     CBFTYPEPVC:\n",
-       "CBFTYPEPVC    -0.513                                                       \n",
-       "CBFTYPESCBF   -0.513  0.500                                                \n",
-       "CBFTYPESCRUB  -0.513  0.500      0.500                                     \n",
-       "FD            -0.888  0.456      0.456       0.456                         \n",
-       "CBFTYPEPVC:    0.456 -0.888     -0.444      -0.444       -0.513            \n",
-       "CBFTYPESCBF:   0.456 -0.444     -0.888      -0.444       -0.513  0.500     \n",
-       "CBFTYPESCRUB:  0.456 -0.444     -0.444      -0.888       -0.513  0.500     \n",
-       "              CBFTYPESCBF:\n",
-       "CBFTYPEPVC                \n",
-       "CBFTYPESCBF               \n",
-       "CBFTYPESCRUB              \n",
-       "FD                        \n",
-       "CBFTYPEPVC:               \n",
-       "CBFTYPESCBF:              \n",
-       "CBFTYPESCRUB:  0.500      "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "summary(pnc.model)"
    ]
@@ -401,8 +439,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "datay = datax[datax$Datasets =='PNC',]\n",
+    "datax = read.csv('gmdata2.csv')\n",
+    "datax <- subset(datax, datax$QEI> 0.25)\n",
+    "datay = datax[datax$Datasets =='NKI',]\n",
     "scbf = datay[datay$CBFTYPE=='SCBF',]\n",
     "scrub = datay[datay$CBFTYPE=='SCRUB',]\n",
     "basil = datay[datay$CBFTYPE=='BASIL',]\n",
@@ -410,7 +449,7 @@
     "\n",
     "cols = c(\"LINE1\"=\"#e34a33\",\"LINE2\"=\"#3182bd\",\"LINE3\"=\"#d95f02\",'LINE4'=\"#c51b8a\")\n",
     "\n",
-    "CBF_Age_plot <- ggplot() + xlim(0, 100)+ ylim(0,1) +\n",
+    "CBF_Age_plot <- ggplot() + xlim(0, 1)+ ylim(0,1) +\n",
     "  #theme(legend.position = \"none\")  +\n",
     "  \n",
     "  theme(axis.title.x = element_text(size = rel(1.6))) +\n",
@@ -418,13 +457,16 @@
     "  theme(axis.text = element_text(size = rel(1.4))) + theme(axis.line = element_line(colour = 'black', size = 1.5), axis.ticks.length = unit(.25, \"cm\")) +\n",
     "  theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(), panel.background = element_blank()) +\n",
     "  #geom_point(data = predicts, aes(x, y), colour = \"darksalmon\", alpha=0.7 ) +  \n",
-    "  #geom_point(data=datay,aes(x=AGE, y=CBF.GM),size=1)+ \n",
-    "  \n",
-    "  geom_smooth(method='lm',data=scbf, aes(x=NEG_CBF, y=QEI), color=\"red\")+\n",
-    "  geom_smooth(method='lm',data=scrub,aes(x=NEG_CBF, y=QEI), color=\"blue\")+\n",
-    "  geom_smooth(method='lm',data=basil,aes(x=NEG_CBF, y=QEI), color='darkgreen')+\n",
-    "  geom_smooth(method='lm',data=pvc,aes(x=NEG_CBF, y=QEI), color=\"#c51b8a\") +\n",
-    "  labs(x = \"NEG CBF\", y = \"QEI\",color=cols,title ='IRR')+ \n",
+    "  geom_point(data=scbf,aes(x=FD, y=QEI),size=1,color=\"red\")+ \n",
+    "  geom_point(data=scrub,aes(x=FD, y=QEI),size=1,color=\"blue\")+ \n",
+    "  geom_point(data=basil,aes(x=FD, y=QEI),size=1,color='darkgreen')+ \n",
+    "  geom_point(data=pvc,aes(x=FD, y=QEI),size=1,color=\"#c51b8a\")+ \n",
+    "\n",
+    "  geom_smooth(method='lm',data=scbf, aes(x=FD, y=QEI), color=\"red\")+\n",
+    "  geom_smooth(method='lm',data=scrub,aes(x=FD, y=QEI), color=\"blue\")+\n",
+    "  geom_smooth(method='lm',data=basil,aes(x=FD, y=QEI), color='darkgreen')+\n",
+    "  geom_smooth(method='lm',data=pvc,aes(x=FD, y=QEI), color=\"#c51b8a\") +\n",
+    "  labs(x = \"FD\", y = \"QEI\",color=cols,title ='NKI')+ \n",
     "  scale_colour_manual(values=cols) + \n",
     "  scale_linetype_manual(values=cols) \n",
     "\n",
@@ -436,7 +478,7 @@
     "dev.off()\n",
     "\n",
     "## Export image\n",
-    "png(filename=\"IRR_QEI_NEGCBF.png\",res = 600, width = 4, height = 4, units = 'in',)\n",
+    "png(filename=\"PNC_QEI_FD.png\",res = 600, width = 4, height = 4, units = 'in',)\n",
     "CBF_Age_plot\n",
     "dev.off()"
    ]
@@ -453,8 +495,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7ddc9509",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " num 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = str(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "012ab53f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NULL"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "85859fb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "1"
+      ],
+      "text/latex": [
+       "1"
+      ],
+      "text/markdown": [
+       "1"
+      ],
+      "text/plain": [
+       "[1] 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "length('ddd')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6eb1867",
    "metadata": {},
    "outputs": [],
    "source": []
