--- a/QEIplot.ipynb
+++ b/QEIplot.ipynb
@@ -2,114 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "72e78599",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading required package: nlme\n",
-      "\n",
-      "This is mgcv 1.8-36. For overview type 'help(\"mgcv-package\")'.\n",
-      "\n",
-      "Loading required namespace: memoise\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘plyr’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:ggpubr’:\n",
-      "\n",
-      "    mutate\n",
-      "\n",
-      "\n",
-      "Loading required package: lme4\n",
-      "\n",
-      "Loading required package: Matrix\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘lme4’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:nlme’:\n",
-      "\n",
-      "    lmList\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘lmerTest’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:lme4’:\n",
-      "\n",
-      "    lmer\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:stats’:\n",
-      "\n",
-      "    step\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘dplyr’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:plyr’:\n",
-      "\n",
-      "    arrange, count, desc, failwith, id, mutate, rename, summarise,\n",
-      "    summarize\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:nlme’:\n",
-      "\n",
-      "    collapse\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:stats’:\n",
-      "\n",
-      "    filter, lag\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    intersect, setdiff, setequal, union\n",
-      "\n",
-      "\n",
-      "Registered S3 methods overwritten by 'parameters':\n",
-      "  method                           from      \n",
-      "  as.double.parameters_kurtosis    datawizard\n",
-      "  as.double.parameters_skewness    datawizard\n",
-      "  as.double.parameters_smoothness  datawizard\n",
-      "  as.numeric.parameters_kurtosis   datawizard\n",
-      "  as.numeric.parameters_skewness   datawizard\n",
-      "  as.numeric.parameters_smoothness datawizard\n",
-      "  print.parameters_distribution    datawizard\n",
-      "  print.parameters_kurtosis        datawizard\n",
-      "  print.parameters_skewness        datawizard\n",
-      "  summary.parameters_kurtosis      datawizard\n",
-      "  summary.parameters_skewness      datawizard\n",
-      "\n",
-      "Learn more about sjPlot with 'browseVignettes(\"sjPlot\")'.\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘sjlabelled’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:dplyr’:\n",
-      "\n",
-      "    as_label\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:ggplot2’:\n",
-      "\n",
-      "    as_label\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(ggplot2)\n",
     "library(mgcv)\n",
@@ -130,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "39cbe153",
    "metadata": {},
    "outputs": [],
@@ -144,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b8b21a29",
    "metadata": {},
    "outputs": [
@@ -434,14 +330,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "434d09f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scale for 'x' is already present. Adding another scale for 'x', which will\n",
+      "replace the existing scale.\n",
+      "\n",
+      "Scale for 'y' is already present. Adding another scale for 'y', which will\n",
+      "replace the existing scale.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<strong>null device:</strong> 1"
+      ],
+      "text/latex": [
+       "\\textbf{null device:} 1"
+      ],
+      "text/markdown": [
+       "**null device:** 1"
+      ],
+      "text/plain": [
+       "null device \n",
+       "          1 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`geom_smooth()` using formula 'y ~ x'\n",
+      "\n",
+      "`geom_smooth()` using formula 'y ~ x'\n",
+      "\n",
+      "`geom_smooth()` using formula 'y ~ x'\n",
+      "\n",
+      "`geom_smooth()` using formula 'y ~ x'\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<strong>null device:</strong> 1"
+      ],
+      "text/latex": [
+       "\\textbf{null device:} 1"
+      ],
+      "text/markdown": [
+       "**null device:** 1"
+      ],
+      "text/plain": [
+       "null device \n",
+       "          1 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "datax = read.csv('gmdata2.csv')\n",
-    "datax <- subset(datax, datax$QEI> 0.25)\n",
-    "datay = datax[datax$Datasets =='NKI',]\n",
+    "datax <- subset(datax, datax$QEI> 0.1)\n",
+    "namex='all'\n",
+    "datay = datax[datax$Datasets != 'FTD',]\n",
     "scbf = datay[datay$CBFTYPE=='SCBF',]\n",
     "scrub = datay[datay$CBFTYPE=='SCRUB',]\n",
     "basil = datay[datay$CBFTYPE=='BASIL',]\n",
@@ -466,19 +428,17 @@
     "  geom_smooth(method='lm',data=scrub,aes(x=FD, y=QEI), color=\"blue\")+\n",
     "  geom_smooth(method='lm',data=basil,aes(x=FD, y=QEI), color='darkgreen')+\n",
     "  geom_smooth(method='lm',data=pvc,aes(x=FD, y=QEI), color=\"#c51b8a\") +\n",
-    "  labs(x = \"FD\", y = \"QEI\",color=cols,title ='NKI')+ \n",
+    "  labs(x = \"FD\", y = \"QEI\",color=cols,title =namex)+ \n",
     "  scale_colour_manual(values=cols) + \n",
-    "  scale_linetype_manual(values=cols) \n",
+    "  scale_linetype_manual(values=cols) +\n",
+    "  scale_x_continuous(expand = c(0, 0)) + scale_y_continuous(expand = c(0, 0))\n",
     "\n",
     "  #theme(legend.position=\"bottom\")\n",
-    "  \n",
-    "  \n",
-    " \n",
     "\n",
     "dev.off()\n",
     "\n",
     "## Export image\n",
-    "png(filename=\"PNC_QEI_FD.png\",res = 600, width = 4, height = 4, units = 'in',)\n",
+    "png(filename=\"all_QEI_FD.png\",res = 600, width = 4, height = 4, units = 'in',)\n",
     "CBF_Age_plot\n",
     "dev.off()"
    ]
